--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
 		<label>a: </label><input id="a-input" type="number" value="0" onchange="OnAChange(event)">
 		<label>b: </label><input id="b-input" type="number" value="10" onchange="OnBChange(event)">
 		<label>N: </label><input id="n-input" type="number" value="20" onchange="OnNChange(event)">
-		<button onclick="CalcularRapido()">Calculo instantáneo</button>
+		<br><br>
+		<button onclick="CalcularRapido()">Calculo instantáneo</button><br><br>
+		<label>Velocidad de animación: </label><input id="a-input" type="number" value="1" onchange="OnSpeedChange(event)"><br>		
 		<button onclick="CalcularAnimado()">Calculo animado</button>
 	</div>
 	<div>
